Actualización 1-19 de marzo

--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="temas.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <
+    <title>la primera pagina</title>
+    <link rel="stylesheet" href="temas.css".css">
 </head>
 <body>
-    <div  class="contenedor">texto</div>
-    <div  class="texto-1"></div>
-    Areas necesarias para enter la programacion
+ <div  class="contenedor"></div>   <p>
+      <center>estudiantes 8-7</center>
+    </p>
+
     <p>
-<center> PAGINA GRADO 8°3</center>
+        <center> 
+        jhoan manuel giraldo ruiz 
+        santiago sierra gonzale
+       </center>
     </p>
-    <p> <center>
-        Juan Esteban Suarez Jaramillo 
-    <center>
-    </p>
-    Nicolás Garcés Acosta
-    <h1>Matematicas</h1>
-    <h2>Tecnologia</h2>
-    <h3>Educacion fisica</h3>
-    <h4>ingles</h4>
-    <h5>español</h5>
-    
-  </body>
-  </html>
+   
+      
+
+  
+</body>
+</html>
