--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
             Water contamination= contaminación del agua   
             </p>
             <h2>Actividad 2</h2>
-            <p>1-	We always separate waste in the morning. <br> 
-                2-	She usually waste water at night. <br>
-                3-	I generally take out garbage in the afternoon. <br>
-                4-	He sometimes pollute the rivers in the city. <br>
-                5-	They normally protect the nature in the city. <br>
-                6-	You ever recycle useful thing in the city.  <br>
-                7-	He rarely use ecofriendly things at home. <br>
-                8-	She occasionally take care of plants at school. <br>
-                9-	They hardly ever turn on lights all day at home. <br>
-                10-	We never throw paper to the floor in the classroom. <br>
-                11-	You often reuse some things at home <br>
-                12-	She frequently recycle plastic bottles in my neighborhood. <br>
-                13-	I very often turn on lights all days in the morning. <br>
-                14-	He seldom protect the nature in the street. <br>
-                15-	They almost always recycle plastic bottles in the city. <br>
+            <p>1-	We always separate waste in the morning. <br><br> 
+                2-	She usually waste water at night. <br><br>
+                3-	I generally take out garbage in the afternoon. <br><br>
+                4-	He sometimes pollute the rivers in the city. <br><br>
+                5-	They normally protect the nature in the city. <br><br>
+                6-	You ever recycle useful thing in the city.  <br><br>
+                7-	He rarely use ecofriendly things at home. <br><br>
+                8-	She occasionally take care of plants at school. <br><br>
+                9-	They hardly ever turn on lights all day at home. <br><br>
+                10-	We never throw paper to the floor in the classroom. <br><br>
+                11-	You often reuse some things at home <br><br>
+                12-	She frequently recycle plastic bottles in my neighborhood. <br><br>
+                13-	I very often turn on lights all days in the morning. <br><br>
+                14-	He seldom protect the nature in the street. <br><br>
+                15-	They almost always recycle plastic bottles in the city. <br><br>
                 </p>
 </body>
 </html>
