--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 
                 <h2>Ingles</h2>
                 <h2>Actividad 1</h2>
-        <p>Air pollution= Contaminación del aire <br>
+        <p>Air pollution= Contaminación del aire <br><br>
  
-            Ozono layer= capa de ozono <br>
+            Ozono layer= capa de ozono <br><br>
             
-            Rainforest = selva tropical <br>
+            Rainforest = selva tropical <br><br>
             
-             Energy= energía <br>
-            Endangerd animals= animales en peligro de extinción <br>
-            Enviroment= medioambiente <br>
-            Enviromentalist= ambientalista <br>
-            Pesticide= pesticida <br>
-            Deforestation= deforestación <br>
-            Recycle= reciclaje <br>
-            Acid rain= lluvia acida <br>
-            Global warming = calentamiento global <br> 
-            Aerosol spray= aerosol <br>
-            Exhaust pupies= escape <br>
-            Planet= planeta <br>
-            Greenhouse effect=  efecto inviernadero <br>
+             Energy= energía <br><br>
+            Endangerd animals= animales en peligro de extinción <br><br>
+            Enviroment= medioambiente <br><br>
+            Enviromentalist= ambientalista <br><br>
+            Pesticide= pesticida <br><br>
+            Deforestation= deforestación <br><br>
+            Recycle= reciclaje <br><br>
+            Acid rain= lluvia acida <br><br>
+            Global warming = calentamiento global <br><br> 
+            Aerosol spray= aerosol <br><br>
+            Exhaust pupies= escape <br><br>
+            Planet= planeta <br><br>
+            Greenhouse effect=  efecto inviernadero <br><br>
             Water contamination= contaminación del agua   
             </p>
             <h2>Actividad 2</h2>
