--- a/Periodo 2.html
+++ b/Periodo 2.html
@@ -39,7 +39,7 @@
                 <p>Los mediadores se eligen de la misma manera que el representa si no que cambia la función, porque la función del mediador es mediarlas peleas y problemas  </p>
 
                 <h2>Ingles</h2>
-                <h2>Actividad 1</h2>
+                h2>Actividad 1</h2>
         <p>Air pollution= Contaminación del aire <br><br>
  
             Ozono layer= capa de ozono <br><br>
