--- a/idex.html
+++ b/idex.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 8.3</title>
     <link rel="stylesheet" href="/html/idex.css">
+    <link rel="stylesheet" href="estilos.css"
 </head>
 <body>
     <h1>Fuentes de energía</h1>
