--- a/ingles.html
+++ b/ingles.html
@@ -68,7 +68,7 @@
                     <!--Menu desplegable--->
 
                     <div class="texto">
-                        
+                        <center>
                         <h2>Actividad 1</h2>
         <p>Air pollution= Contaminación del aire <br><br>
  
@@ -109,7 +109,7 @@
                 15-	They almost always recycle plastic bottles in the city. <br><br>
                 </p>
                     </div>
-
+                </center>
                     
 </body>
 </html>
