--- a/Tecnología2.html
+++ b/Tecnología2.html
@@ -11,7 +11,7 @@
 
 <style>
     body{
-        color: rgb(0, 0, 0);
+        color: rgb(240, 240, 240);
     }
 </style>
 <body>
@@ -66,12 +66,6 @@
                         </div>
                     
                     <!--Menu desplegable--->
-
                     <div class="texto">
                         <center>
-                            <div class="titulo">Contacto</div> 
-                        juansuarezj@idem.edu.co <br><br>
-                        nicolasgarcesa@idem.edu.co</center>
-                    </div>
-</body>
-</html>
+                     <div class="titulo">Tecnología</div> 
