--- a/contactos.html
+++ b/contactos.html
@@ -15,9 +15,9 @@
     }
 </style>
 <body>
-    <center><h1>Juan Esteban Suárez Jaramillo
+    <h1 class="tc">Juan Esteban Suárez Jaramillo
         <br>Nicolás Garcés Acosta 
-        </h1></center>
+    </h1>
     
                 <div class="principal">
 
@@ -68,10 +68,11 @@
                     <!--Menu desplegable--->
 
                     <div class="texto">
-                        <center>
-                            <div class="titulo">Contacto</div> 
+                        
+                        <div class="titulo">Contacto</div> 
+
                         juansuarezj@idem.edu.co <br><br>
-                        nicolasgarcesa@idem.edu.co</center>
-                    </div>
+                        nicolasgarcesa@idem.edu.co
+                </div>
 </body>
 </html>
