--- a/Periodo 2.html
+++ b/Periodo 2.html
@@ -61,28 +61,28 @@
                     <!--Menu desplegable--->
                     <center>
                    <h3>¿Qué es un circuito eléctrico?</h3>
-<p>Un circuito eléctrico es el conjunto de elementos eléctricos conectados entre sí que permiten generar, transportar y utilizar la energía eléctrica con la finalidad de transformarla en otro tipo de energía como, por ejemplo, energía calorífica (estufa), energía lumínica (bombilla) o energía mecánica (motor).</p>
+<p><h4></h4>Un circuito eléctrico es el conjunto de elementos eléctricos conectados entre sí que permiten generar, transportar y utilizar la energía eléctrica con la finalidad de transformarla en otro tipo de energía como, por ejemplo, energía calorífica (estufa), energía lumínica (bombilla) o energía mecánica (motor).</p>
     <p>¿Cuáles son los tipos de circuitos eléctricos?</p>
                    <h3>¿Qué es un circuito eléctrico?</h3>
-                   <p>Tipos de circuitos eléctricos. Hay cinco tipos principales de circuitos básicos: circuito cerrado, circuito abierto, cortocircuito, circuito en serie y circuito en paralelo. Cada uno de ellos está diseñado para crear un camino conductor para el flujo de corriente. En un circuito abierto no circula corriente.</p>
+                   <p>Tipos de circuitos eléctricos. Hay cinco tipos principales de circuitos básicos: circuito cerrado, circuito abierto, cortocircuito, circuito en serie y circuito en paralelo. Cada uno de ellos está diseñado para crear un camino conductor para el flujo de corriente. En un circuito abierto no circula corriente.</p></h4>
 <h3>¿Cuáles son los elementos que conforman un circuito eléctrico?</h3>
-<p>Elementos generadores</p>
+<h4><p>Elementos generadores</p></h4>
 
-    <p>Son los que empujan las cargas por el circuito (por ejemplo las pilas) . Para que se muevan las cargas, necesitamos algo que las empuje. Los generadores realizan esta función. Además de las pilas existen más tipos de elementos generadores como por ejemplo los alternadores y las dinamos.</p>
+<h4><p>Son los que empujan las cargas por el circuito (por ejemplo las pilas) . Para que se muevan las cargas, necesitamos algo que las empuje. Los generadores realizan esta función. Además de las pilas existen más tipos de elementos generadores como por ejemplo los alternadores y las dinamos.</p></h4>
 
 <h3>¿Cómo se crea un circuito eléctrico?</h3>
 
-<p>Pasos
+<h4><p>Pasos
     <p>1.	Pela los extremos de los cables. ...</p>
         <p>2.	Une el cobre de los cables con los polos de la batería. ...</p>
             <p>3.	Dirige uno de los dos cables al interruptor. ...</p>
                 <p>4.	Conecta el otro cable de la batería con el portalámparas. ...</p>
-                    <p>5.	Prueba el circuito.</p>
+                    <p>5.	Prueba el circuito.</p></h4>
 
 <h3>¿Cómo funciona la corriente eléctrica?</h3>
 
 
-    <p>La corriente eléctrica es un fenómeno físico causado por el desplazamiento de una carga (ión o electrón). En el caso de un conductor metálico, son principalmente los electrones los que toman parte en la corriente. La intensidad de la corriente es la cantidad de carga que pasa por un conductor por unidad de tiempo.</p>
-</center>
+<h4><p>La corriente eléctrica es un fenómeno físico causado por el desplazamiento de una carga (ión o electrón). En el caso de un conductor metálico, son principalmente los electrones los que toman parte en la corriente. La intensidad de la corriente es la cantidad de carga que pasa por un conductor por unidad de tiempo.</p>
+</h4></div></center>
 </body>
 </html>
