--- a/Tecnología2.html
+++ b/Tecnología2.html
@@ -39,7 +39,7 @@
                                     <a href="#">Ingles</a>
                                     <ul>
                                         <li><a href="ingles.html">Período uno</a></li>
-                                        <li><a href="ingles.html">Periodo dos</a></li>
+                                        <li><a href="Ingles2.html">Periodo dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                     </ul>
@@ -49,7 +49,7 @@
                                     <a href="#">Sociales</a>
                                     <ul>
                                         <li><a href="Sociales.html">Período uno</a></li>
-                                        <li><a href="Sociales.html">Periodo dos</a></li>
+                                        <li><a href="sociales2.html">Periodo dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                     </ul>
