--- a/Tecnología.html
+++ b/Tecnología.html
@@ -40,7 +40,7 @@
                                     <a href="#">Ingles</a>
                                     <ul>
                                         <li><a href="ingles.html">Período uno</a></li>
-                                        <li><a href="ingles.html">Periodo dos</a></li>
+                                        <li><a href="Ingles2.html">Periodo dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                     </ul>
@@ -50,7 +50,7 @@
                                     <a href="#">Sociales</a>
                                     <ul>
                                         <li><a href="Sociales.html">Período uno</a></li>
-                                        <li><a href="Sociales.html">Periodo dos</a></li>
+                                        <li><a href="sociales2.html">Periodo dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                     </ul>
