--- a/ingles.html
+++ b/ingles.html
@@ -40,7 +40,7 @@
                                     <a href="#">Ingles</a>
                                     <ul>
                                         <li><a href="ingles.html">Período uno</a></li>
-                                        <li><a href="ingles.html">Periodo dos</a></li>
+                                        <li><a href="Ingles2.html">Periodo dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                     </ul>
