--- a/contactos.html
+++ b/contactos.html
@@ -31,7 +31,7 @@
                                     <a href="#">Tecnología e informática</a>
                                     <ul>
                                         <li><a href="Tecnología.html">Período uno</a></li>
-                                        <li><a href="Periodo 2.html">Período dos</a></li>
+                                        <li><a href="Tecnología2.html">Período dos</a></li>
                                         <li><a href="#">Período tres</a></li>
                                        
                                        
