--- a/periodo 1.html
+++ b/periodo 1.html
@@ -135,7 +135,7 @@
                 14-	He seldom protect the nature in the street. <br><br>
                 15-	They almost always recycle plastic bottles in the city. <br><br>
                 </p>
-
+</div>
     </center>
 
                     
