--- a/Tecnología2.html
+++ b/Tecnología2.html
@@ -63,6 +63,7 @@
                         </div>
                     
                     <!--Menu desplegable--->
+                    <div class="texto">
                     <center><br><br><br><br><br>
                         <h1>Circuitos electricos</h1> 
                         
