--- a/Tecnologia3.html
+++ b/Tecnologia3.html
@@ -65,8 +65,18 @@
                     <!--Menu desplegable--->
                     <div class="texto">
 
-                        <h4>TECNOLOGÍA TERCER PERIODO</h4>
+                        <h4>FUNCIONAMIENTO DE EXCEL</h4>
                     <br>
                     <br>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/hCMTQYc4yLQ?si=D14ODwkHieGyWYOG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vPq9p7nHhL0?si=oXwgMWUt-gLiaj1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h4>Funcion de Excel</h4>    
+                Una función en Excel es una fórmula predefinida que realiza cálculos utilizando valores específicos, denominados argumentos, en un orden determinado. Estas funciones abarcan desde operaciones matemáticas básicas hasta complejos análisis estadísticos y financieros, facilitando enormemente el trabajo con datos
+            Revisa a continuación las funciones básicas de Excel más utilizadas:
+            Sumar. La función sumar en Excel permite sumar una fila o columna. ...
+            Restar. Se usa para restar datos de filas o columnas. ...
+            Promedio. ...
+            CTRL Z / CTRL Y. ...
+            Pegado especial. ...
+            Eliminar duplicados. ...
+            BuscarV.            
+</div>
