--- a/Tecnologia3.html
+++ b/Tecnologia3.html
@@ -79,4 +79,6 @@
             Pegado especial. ...
             Eliminar duplicados. ...
             BuscarV.            
+            <br><br>
+            <iframe src="https://drive.google.com/file/d/1oj5j0fJpQVE8V6gS4YB5ts-CslOV-3NJ/preview" width="300" height="70" allow="autoplay"></iframe>
 </div>
