--- a/contactos.html
+++ b/contactos.html
@@ -73,6 +73,7 @@
 
                         juansuarezj@idem.edu.co <br><br>
                         nicolasgarcesa@idem.edu.co
+                        <img src="t.png" class="img"></div>
                 </div>
 </body>
 </html>
