--- a/sociales3.html
+++ b/sociales3.html
@@ -66,4 +66,11 @@
                     <div class="texto">
 
                     <h4>SOCIALES TERCER PERIODO</h4>
+
+                <h6>Mapa conceptual</h6>
+                <img src="Campitalismo y movimiento obrero.png" class="img">
+            <br><br>
+            <h6>podscast</h6>
+            <iframe src="https://drive.google.com/file/d/16kebxWVkqxuDhE46tKLGBH3VR8BlE9Z7/preview" width="640" height="480" allow="autoplay"></iframe> <br><br>
+            <iframe src="https://drive.google.com/file/d/1WeXZKuRmDt1roBl1Jxh3_3J0TZM3mojt/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
