--- a/contactos.html
+++ b/contactos.html
@@ -72,8 +72,8 @@
                         <div class="titulo">Contacto</div> 
 
                         juansuarezj@idem.edu.co <br><br>
-                        nicolasgarcesa@idem.edu.co
-                        <img src="t.png" class="img"></div>
+                        nicolasgarcesa@idem.edu.co <br>
+                        <img src="_100697566_hi045932006.jpg.webp" class="img"></div>
                 </div>
 </body>
 </html>
