--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     <!--Menu desplegable--->
 
                     <div class="texto">
+                        <img src="las-preguntas-mas-frecuentes-sobre-la-realidad-virtual-y-la-inteligencia-artificial-1500x891.jpg" class="img"></div>
+                    
                         
                     </div>
 </body>
