--- a/contactos.html
+++ b/contactos.html
@@ -73,7 +73,7 @@
 
                         juansuarezj@idem.edu.co <br><br>
                         nicolasgarcesa@idem.edu.co <br>
-                        <img src="_100697566_hi045932006.jpg.webp" class="img"></div>
+                        <img src="datos-que-seguramente-no-sabias-sobre-el-futbol-Or-B4.png" class="img"></div>
                 </div>
 </body>
 </html>
